manifests/prd/web.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-headless
  namespace: podkrepibg
spec:
  selector:
    app: frontend
  clusterIP: None
  ports:
    - name: http
      port: 80
      targetPort: 3040
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: podkrepibg
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/podkrepi-bg/frontend:v0.6.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3040
          livenessProbe:
            httpGet:
              path: /api/healthcheck
              port: 3040
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/healthcheck
              port: 3040
            initialDelaySeconds: 5
            periodSeconds: 5
